datalakehouse: show expected XTable output + explain the harmless JVM warnings
Add a sample of the (quieted) RunSync output to README step 5 so readers
unfamiliar with these messages know what success looks like. Annotate the
JDK 11 JVM WARNING lines (multi-release JARs, illegal reflective access) as
normal/harmless and not controllable via the log4j2 config, and note that a
re-run with no new Hudi commits is a safe no-op (Running sync lines but no
Sync is successful lines).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>